# family-location

app/: Cargo.toml
app/src/: create_user.rs  get_user_locations.rs  helpers.rs  keys_struct.rs  main.rs  submit_location.rs
app/src/keys/dante/: keys.json
app/src/keys/patinho/: keys.json
server/: Cargo.toml  TODO
server/src/: database_operations.rs  main.rs
server/src/endpoints/: mod.rs  register_user.rs  submit_location.rs  users_location.rs
server/src/error/: mod.rs
server/src/sql/: comando_criacao_dbs.sql  data.db
server/src/structs/: access_grants.rs  location.rs  mod.rs  user_info.rs
server/tests/: database_tests.rs
