[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "^0.8"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
