[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
env_logger = "0.11.10"
log = "0.4.29"
openssl = "0.10.76"
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
rand = "^0.8"
